Fixed jump on edit click

--- a/css/_input-types.scss
+++ b/css/_input-types.scss
@@ -1,9 +1,9 @@
-input[type=search] {
+input[type="search"] {
   border: none;
   background-color: lighten(cornflowerblue,25%);
   color: white;
 }
-input[type=checkbox], input[type=radio] {
+input[type="checkbox"], input[type="radio"] {
   width: 0;
   height: 0;
   display: none;
@@ -12,32 +12,6 @@ input[type=checkbox], input[type=radio] {
     color: white;
   }
 }
-td input[type=date] {
+td input[type="date"] {
   max-width: 9.5em;
 }
-// input[type=file] {
-//   &::-webkit-file-upload-button {
-//     visibility: hidden;
-//   }
-//   &::before {
-//     content: 'Select some files';
-//     display: inline-block;
-//     background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
-//     border: 1px solid #999;
-//     border-radius: 3px;
-//     padding: 5px 8px;
-//     outline: none;
-//     white-space: nowrap;
-//     -webkit-user-select: none;
-//     cursor: pointer;
-//     text-shadow: 1px 1px #fff;
-//     font-weight: 700;
-//     font-size: 10pt;
-//   }
-//   &:hover::before {
-//     border-color: black;
-//   }
-//   &:active::before {
-//     background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
-//   }
-// }
